# manosaba-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  package_full.ps1  run.ps1
App/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
App/Scene/: DemoScene.cpp  DemoScene.h  GameScene.cpp  GameScene.h  PlayScene.cpp  PlayScene.h
Assets/Story/Demo/: demo_story.graph.json
Assets/Story/Demo/Cast/: cast_table.json
Assets/Story/Demo/Choice/: be_choice_back.json
Assets/Story/Demo/Debate/: n1_interrogation.json
Assets/Story/Demo/Performance/: performance_table.json
Assets/Story/Demo/Stage/: stage_table.json
Assets/Story/Demo/VN/: be_badend.json  be_badend.txt  (+14 more)
Assets/Story/DemoNovel/: demo_novel.graph.json
Core/: CMakeLists.txt
Core/Input/: InputState.h  InputSystem.h
Core/Time/: FrameClock.cpp  FrameClock.h
Core/Window/: Win32Window.cpp  Win32Window.h
Docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  PACKAGING_CN.md  STORY_FORMAT_CN.md
Game/: CMakeLists.txt
Game/Common/: Logger.cpp  Logger.h
Game/Director/: HudEvaluator.cpp  HudEvaluator.h  SceneCrossfadeController.h  StageCameraDirector.cpp  StageCameraDirector.h  StageWorld.cpp  StageWorld.h
Game/Director/Filters/: LowPass.h
Game/Director/StageCamera/: StageCameraSolver.cpp  StageCameraSolver.h  StageCameraTypes.h
Game/Flow/: GameFlow.cpp  GameFlow.h  GameFlowTypes.h
Game/Presentation/: IChapterPresentation.h  NullPresentation.h  PresentationRegistry.cpp  PresentationRegistry.h  TrialPresentation.cpp  TrialPresentation.h
Game/RenderBridge/: TextService.cpp  TextService.h  TextureCatalog.cpp  TextureCatalog.h  TextureService.cpp  TextureService.h
Game/Screens/: ChoiceScreen.cpp  ChoiceScreen.h  DebateScreen.cpp  DebateScreen.h  IStoryScreen.h  PresentScreen.cpp  PresentScreen.h  StoryOverlayLayer.cpp  StoryOverlayLayer.h  VnScreen.cpp  VnScreen.h
Game/Session/: StoryActionMap.cpp  StoryActionMap.h  StoryActions.h  StoryHistory.cpp  StoryHistory.h  StoryScreenManager.cpp  StoryScreenManager.h  StorySession.cpp  StorySession.h
Game/Story/: StoryGraph.h  StoryGraphLoader.cpp  StoryGraphLoader.h  StoryPlayer.cpp  StoryPlayer.h  StoryRuntime.cpp  StoryRuntime.h  StorySignal.h  StoryTables.h  StoryTimer.h  StoryTypes.h  StoryView.h
Game/Story/Resources/: CastDef.h  CastDefLoader.cpp  CastDefLoader.h  ChoiceDef.h  ChoiceDefLoader.cpp  ChoiceDefLoader.h  DebateDef.h  DebateDefLoader.cpp  DebateDefLoader.h  PerformanceDef.h  PerformanceDefLoader.cpp  PerformanceDefLoader.h  PresentDef.h  PresentDefLoader.cpp  PresentDefLoader.h  StageDef.h  StageDefLoader.cpp  StageDefLoader.h  VnScript.cpp  VnScript.h
Game/Story/Runners/: ChoiceRunner.cpp  ChoiceRunner.h  DebateRunner.cpp  DebateRunner.h  NovelSceneState.h  PresentRunner.cpp  PresentRunner.h  VnRunner.cpp  VnRunner.h
Game/Story/TextMarkup/: SusMarkup.cpp  SusMarkup.h
Game/UI/: ChoiceHud.cpp  ChoiceHud.h  DebateHud.cpp  DebateHud.h  PresentHud.cpp  PresentHud.h  UiTypes.h  VnHud.cpp  VnHud.h
Game/UI/Framework/: UIBaker.cpp  UIBaker.h  UIBuilder.h  UIEmitter.cpp  UIEmitter.h  UIFrame.h  UIInteraction.cpp  UIInteraction.h
Game/UI/Theme/: TextTheme.h
Game/UI/Widgets/: ChoiceDialogWidget.cpp  ChoiceDialogWidget.h  DebateDialogWidget.cpp  DebateDialogWidget.h  DebateMenuWidget.cpp  DebateMenuWidget.h  DebateSpeedWidget.cpp  DebateSpeedWidget.h  HistoryWidget.cpp  HistoryWidget.h  PresentDialogWidget.cpp  PresentDialogWidget.h  TimerWidget.cpp  TimerWidget.h  UIButtonWidget.cpp  UIButtonWidget.h  VnAutoWidget.cpp  VnAutoWidget.h  VnDialogWidget.cpp  VnDialogWidget.h
RHI/DX11/: CMakeLists.txt  DX11Common.h  DX11DepthBuffer.cpp  DX11DepthBuffer.h  DX11Device.cpp  DX11Device.h  DX11SwapChain.cpp  DX11SwapChain.h  DX11Texture2D.cpp  DX11Texture2D.h
Render/: CMakeLists.txt  DX11CommonState.cpp  DX11CommonState.h  DX11DebugLogger.cpp  DX11DebugLogger.h  DX11RenderUtils.h  DX11Renderer.cpp  DX11Renderer.h  RenderPlan.h
Render/Demo/: CubeDemo.cpp  CubeDemo.h  TriangleDemo.cpp  TriangleDemo.h
Render/Draw/: CardDrawItem.h  DrawItem.h  DrawList.h  MeshDrawItem.h  SpriteDrawItem.h
Render/Drawers/: CardDrawer.cpp  CardDrawer.h  DrawServices.cpp  DrawServices.h  MeshDrawer.cpp  MeshDrawer.h  SpriteBatcher.cpp  SpriteBatcher.h
Render/Passes/: CardPass.cpp  CardPass.h  ComposePass.cpp  ComposePass.h  CubePass.cpp  CubePass.h  IRenderPass.h  MeshPass.cpp  MeshPass.h  RenderPassBase.h  SceneSpritePass.cpp  SceneSpritePass.h
Render/Pipeline/: ComposePipeline.cpp  ComposePipeline.h  MeshPipeline.cpp  MeshPipeline.h  SpritePipeline.cpp  SpritePipeline.h
Render/Pipelines/: CardPipeline.cpp  CardPipeline.h  ComposePipeline.cpp  ComposePipeline.h  MeshPipeline.cpp  MeshPipeline.h  PipelineLibrary.cpp  PipelineLibrary.h  SpritePipeline.cpp  SpritePipeline.h
Render/Primitives/: CubeDemo.cpp  CubeDemo.h  FullScreenTexDemo.cpp  FullScreenTexDemo.h  TestPattern.h  TriangleDemo.cpp  TriangleDemo.h
Render/Renderers/: SpriteRenderer.h
Render/Resources/: Texture2D.cpp  Texture2D.h
Render/Scene3D/: Camera3D.cpp  Camera3D.h  Mesh.h  MeshFactory.cpp  MeshFactory.h
Render/Shader/: ShaderManager.cpp  ShaderManager.h
Render/Sprite/: SpriteRenderer.cpp  SpriteRenderer.h
Render/Text/: TextBaker.cpp  TextBaker.h  TextCache.h
Resources/: CMakeLists.txt
Resources/Image/: WICImageLoader.cpp  WICImageLoader.h
Resources/Mesh/: MeshData.h  MeshLoader.cpp  MeshLoader.h
Scripts/: clear_logs.ps1  find_vcredist_dlls.ps1  package.ps1  run.ps1  verify.ps1  verify_system.bat  verify_system.ps1
Shaders/: card.hlsl  compose.hlsl  fullscreen_tex_ps.hlsl  fullscreen_tex_vs.hlsl  mesh.hlsl  sprite.hlsl  sprite_ps.hlsl  sprite_vs.hlsl  triangle.hlsl  triangle_ps.hlsl  triangle_vs.hlsl
Tests/: CMakeLists.txt  README.md
Tests/Game/Flow/: GameFlowTest.cpp
Tests/Game/Story/: StoryGraphLoaderTest.cpp  StoryPlayerTest.cpp  StoryRuntimeTest.cpp
Tests/Render/: MeshTest.cpp
Utils/: CMakeLists.txt  ConsoleUtils.h  DiskFileSystem.cpp  DiskFileSystem.h  FileUtils.cpp  FileUtils.h  IFileSystem.h  Logger.cpp  Logger.h  MathUtils.h  StringUtils.h
(+14 files in other folders)
